| Bug #4554 | "recursive subqueries" (crashme) crash mysql 4.1 on x86_64 architecture | ||
|---|---|---|---|
| Submitted: | 14 Jul 2004 22:15 | Modified: | 17 Jul 2004 1:42 |
| Reporter: | Oleksandr Byelkin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S1 (Critical) |
| Version: | 4.1 | OS: | x86_64 linux |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[14 Jul 2004 22:15]
Oleksandr Byelkin
[14 Jul 2004 22:58]
Oleksandr Byelkin
ChangeSet 1.1978 04/07/14 23:57:14 bell@sanja.is.com.ua +1 -0 stack overflow check added for subqueries processing (BUG#4554)
[17 Jul 2004 1:42]
Oleksandr Byelkin
pushed
