stack overflow check added for subqueries processing (BUG#4554)